--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,25 +3,15 @@ name = "userlink-mcp-server"
 version = "0.1.0"
 description = "Universal Bridge for Your Work Data - MCP Server for aggregating data from major SaaS platforms"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.15"
 license = { text = "MIT" }
 authors = [
     { name = "UserLink Contributors" }
 ]
 dependencies = [
-    "fastmcp>=0.5.0",
-    "httpx>=0.28.0",
-    "pydantic>=2.10.0",
-    "python-dotenv>=1.0.1",
-]
-
-[project.optional-dependencies]
-dev = [
-    "pytest>=8.3.0",
-    "pytest-asyncio>=0.24.0",
-    "black>=24.10.0",
-    "ruff>=0.8.0",
-    "mypy>=1.13.0",
+    "fastmcp>=2.13.0",
+    "httpx>=0.28.1",
+    "python-dotenv>=1.2.1",
 ]
 
 [build-system]
@@ -30,30 +20,3 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
-
-[dependency-groups]
-dev = [
-    "pytest>=8.3.0",
-    "pytest-asyncio>=0.24.0",
-    "black>=24.10.0",
-    "ruff>=0.8.0",
-    "mypy>=1.13.0",
-]
-
-[tool.black]
-line-length = 100
-target-version = ['py310']
-
-[tool.ruff]
-line-length = 100
-target-version = "py310"
-
-[tool.mypy]
-python_version = "3.10"
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = true
-
-[tool.pytest.ini_options]
-asyncio_mode = "auto"
-testpaths = ["tests"]
