--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,12 @@ dependencies = [
     "fastmcp>=2.13.0",
     "httpx>=0.28.1",
     "python-dotenv>=1.2.1",
+    "atlassian-python-api>=4.0.0",
+    "beautifulsoup4>=4.12.3",
+    "markdownify>=0.11.6",
+    "markdown>=3.7.0",
+    "pydantic>=2.10.6",
+    "requests>=2.31.0",
 ]
 
 [build-system]
